# bumpversion2

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  EXAMPLES.rst  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yaml  ci.yml
bumpversion/: __init__.py  __main__.py  cli.py  exceptions.py  functions.py  utils.py  vcs.py  version_part.py
tests/: conftest.py  test_cli.py  test_functions.py  test_version_part.py
