[tool.poetry]
name = "bumpversion2"
version = "0"  # manage by poetry-plugin-version
description = ""
authors = ["Waket Zheng <waketzheng@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include="bumpversion"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
fast-dev-cli = {version=">=0.11.1", python=">=3.10"}
pytest = "^8.3.3"
testfixtures = "^8.3.0"

[tool.poetry.scripts]
bumpversion = "bumpversion:cli.main"

[tool.poetry-plugin-version]
source = "init"

[tool.mypy]
pretty = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.test_functions"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.test_version_part"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.test_cli"]
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
