[project]
name = "bumpversion2"
description = "Make it easy to bump version by command line."
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
license = {text="MIT"}
readme = "README.md"
keywords = ["bumpversion"]
requires-python = ">=3.9"
dynamic = [ "version" ]
dependencies = []

[tool.poetry]
version = "0"  # manage by poetry-plugin-version
packages = [{include="bumpversion"}]

[tool.poetry.group.dev.dependencies]
fast-dev-cli = "^0.13.0"
pytest = "^8.3.5"
testfixtures = "^8.3.0"

[project.scripts]
bumpversion = "bumpversion:cli.main"

[tool.ruff.lint]
extend-select = [
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "SIM",    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF100", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]
ignore = ["UP031"] # https://docs.astral.sh/ruff/rules/printf-string-formatting/

[tool.mypy]
pretty = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.test_functions"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.test_version_part"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.test_cli"]
check_untyped_defs = true

[build-system]
requires = ["poetry-plugin-version"]
build-backend = "poetry_plugin_version.api"
