[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = {source="file", path="bumpversion/__init__.py"}

[project]
name = "bumpversion2"
description = "Make it easy to bump version by command line."
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
license = {text="MIT"}
readme = "README.md"
keywords = ["bumpversion"]
requires-python = ">=3.9"
dynamic = [ "version" ]
dependencies = []

[dependency-groups]
dev = [
    "mypy >=1.17.1",
    "pytest >=8.3.5",
    "testfixtures >=8.3.0",
]

[project.scripts]
bumpversion = "bumpversion:cli.main"

[tool.ruff.lint]
extend-select = [
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "SIM",    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF100", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]
ignore = ["UP031"] # https://docs.astral.sh/ruff/rules/printf-string-formatting/

[tool.mypy]
pretty = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.test_functions"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.test_version_part"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.test_cli"]
check_untyped_defs = true
